--- a/guest-app/src/main/resources/application.properties
+++ b/guest-app/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 atlanta.guest.service.url=http://localhost:8100
 spring.jpa.hibernate.ddl-auto=none
-spring.ldap.embedded.ldif=classpath:atlanta.ldif
-spring.ldap.embedded.base-dn=dc=sumitsharma,dc=com
-spring.ldap.embedded.port=8389
+
+#spring.ldap.embedded.ldif=classpath:atlanta.ldif
+#spring.ldap.embedded.base-dn=dc=sumitsharma,dc=com
+#spring.ldap.embedded.port=8389
